--- a/README.xx
+++ b/README.xx
@@ -1,12 +1,12 @@
 - 👋 Hi, I’m @radhikajha13
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
-- 😄 Pronouns: ...
+- 👀 I’m interested in ...Business Analysis
+- 🌱 I’m currently learning ...all my skills
+- 💞️ I’m looking to collaborate on ...live project related to food processing industry
+- 📫 How to reach me ...radxx013@gmail.com
+- 😄 Pronouns: ...she/her
 - ⚡ Fun fact: ...
 
 <!---
 radhikajha13/radhikajha13 is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
 You can click the Preview link to take a look at your changes.
---->
+--->https://github.com/radhikajha13/radhikajha13/edit/main/README.xx
