--- a/README.xx
+++ b/README.xx
@@ -1,6 +1,6 @@
 - 👋 Hi, I’m @radhikajha13
-- 👀 I’m interested in ...Business Analysis
-- 🌱 I’m currently learning ...all my skills
+- 👀 I’m interested in ...projects related to Business Analysis
+- 🌱 I’m currently learning ...Business Management
 - 💞️ I’m looking to collaborate on ...live project related to food processing industry
 - 📫 How to reach me ...radxx013@gmail.com
 - 😄 Pronouns: ...she/her
