--- a/README.xx
+++ b/README.xx
@@ -2,7 +2,7 @@
 - 👀 I’m interested in ...projects related to Business Analysis
 - 🌱 I’m currently learning ...Business Management
 - 💞️ I’m looking to collaborate on ...live project related to food processing industry
-- 📫 How to reach me ...radxx013@gmail.com
+- 📫 How to reach me ...radhikajha13@yahoo.com
 - 😄 Pronouns: ...she/her
 - ⚡ Fun fact: ...
 
