--- a/README.xx
+++ b/README.xx
@@ -1,8 +1,8 @@
 - 👋 Hi, I’m @radhikajha13
 - 👀 I’m interested in ...projects related to Business Analysis
 - 🌱 I’m currently learning ...Business Management
-- 💞️ I’m looking to collaborate on ...live project related to food processing industry
+- 💞️ I’m looking to collaborate on ...live project related to products in food processing industry
 - 📫 How to reach me ...radhikajha13@yahoo.com
 - 😄 Pronouns: ...she/her
-- ⚡ Fun fact: ...
+- ⚡
 
