--- a/README.xx
+++ b/README.xx
@@ -1,6 +1,6 @@
 - 👋 Hi, I’m @radhikajha13
 - 👀 I’m interested in ...projects related to Business Analysis
-- 🌱 I’m currently learning ...Business Management
+- 🌱 I’m currently learning ...Food Agri Business Management & Marketing
 - 💞️ I’m looking to collaborate on ...live project related to products in food processing industry
 - 📫 How to reach me ...radhikajha13@yahoo.com
 - 😄 Pronouns: ...she/her
