--- a/README.xx
+++ b/README.xx
@@ -2,7 +2,9 @@
 - 👀 I’m interested in ...projects related to Business Analysis
 - 🌱 I’m currently learning ...Food Agri Business Management & Marketing
 - 💞️ I’m looking to collaborate on ...live project related to products in food processing industry
-- 📫 How to reach me ...radhikajha13@yahoo.com
+- 📫 How to reach me ...radxx13@gmail.com
 - 😄 Pronouns: ...she/her
-- ⚡
+- Portfolio -https://authory.com/RadhikaJha
+https://horse-timpani-940.notion.site/Personal-Website-1ca39ff359778025ae3ad4049bdf6131
+             
 
